fixing error that made scroll disappear on mobile

--- a/style.css
+++ b/style.css
@@ -419,7 +419,7 @@ body {
 	flex-flow: column;
 	justify-content: center;
 	align-items: center;
-	padding-top: 32vh;
+	padding-top: 20%;
 	width: 100%;
 	height: 10vh;
 }
@@ -857,7 +857,7 @@ body {
 	}
 
 	.Home-main-scroll {
-		padding: 5vh 0;
+		/* padding: 20%; */
 		height: 10vh;
 	}
 
